2009-08-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Fixed Bug
	  373203 - Add widget to toolbox could be beefed up & Bug
	  373202 - Ask before removing widgets from toolbox.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport.csproj: Updated dependencies. We
	  now depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport/CodeBehind.cs: Fix checking for
	  parent - don't return nonexistent file.

2009-08-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxItemToolboxLoader.cs:
	  Track api changes.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport/ToolboxService.cs:
	* MonoDevelop.DesignerSupport.Toolbox/ToolboxItemToolboxLoader.cs:
	  Use the new AssemblyContext class to query and resolve
	  assemblies.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Flush.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.DesignerSupport.Toolbox.ComponentSelectorDialog.cs:
	  Flush.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/IToolboxLoader.cs: Track
	  api changes.

2009-07-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport.Projects/SolutionItemDescriptor.cs:
	* MonoDevelop.DesignerSupport.Projects/WorkspaceItemDescriptor.cs:
	  Use the new api for renaming projects and solutions.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.DesignerSupport.csproj:
	* MonoDevelop.DesignerSupport.PropertyGrid:
	* MonoDevelop.DesignerSupport/PropertyPad.cs:
	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs:
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors: